--- a/cookbooks/bitrix/files/default/bitrix.cnf
+++ b/cookbooks/bitrix/files/default/bitrix.cnf
@@ -3,6 +3,9 @@ socket		= /var/run/mysqld/mysqld.sock
 nice		= -5
 
 [mysqld]
+low-priority-updates
+innodb_file_io_threads=8
+
 skip-external-locking
 
 bind-address		= 127.0.0.1
@@ -26,19 +29,21 @@ concurrent_insert	        = 2
 read_buffer_size	        = 4M
 read_rnd_buffer_size	= 2M
 
-query_cache_limit		= 4M
-query_cache_size		= 24M
+query_cache_limit		= 5M
+query_cache_size		= 20M
 query_cache_type		= 1
 
 default_storage_engine	= InnoDB
-innodb_log_buffer_size	= 80M
+innodb_log_file_size=256M
+innodb_log_buffer_size	= 4M
 innodb_file_per_table	= 1
 innodb_open_files	        = 1000
 
 innodb_buffer_pool_size=24M
-thread_concurrency=6
+thread_concurrency=8
 thread_cache = 16
-innodb_flush_log_at_trx_commit = 2
+#innodb_flush_log_at_trx_commit = 2
+innodb_flush_log_at_trx_commit = 0
 innodb_flush_method     = O_DIRECT
 join_buffer_size=2M
 transaction-isolation=READ-COMMITTED
